Security checks for backend functions. Fixed problem with plate report not displaying request submitter. Fixed bug with checking if a plate has been added to the run.  Other misc minor changes. (mbowler)