@@ -11,6 +11,7 @@ import hci.gnomex.model.Plate;
 import hci.gnomex.model.PlateWell;
 import hci.gnomex.model.ReactionType;
 import hci.gnomex.model.Request;
+import hci.gnomex.security.SecurityAdvisor;
 
 import java.io.Serializable;
 import java.sql.SQLException;
@@ -60,108 +61,115 @@ public class GetInstrumentRunList extends GNomExCommand implements Serializable 
   public Command execute() throws RollBackCommandException {
 
     try {
-      Document doc = new Document( new Element( listKind ) );
+      if (this.getSecurityAdvisor().hasPermission( SecurityAdvisor.CAN_MANAGE_DNA_SEQ_CORE )) {
 
-      if( ! runFilter.hasSufficientCriteria( this.getSecAdvisor() ) ) {
-        message = "Please select a filter";
-      } else {
-        Session sess = this.getSecAdvisor().getReadOnlyHibernateSession(
-            this.getUsername() );
+        Document doc = new Document( new Element( listKind ) );
 
-        StringBuffer buf = runFilter.getQuery( this.getSecAdvisor() );
-        log.info( "Query for GetInstrumentRunList: " + buf.toString() );
-        List runs = sess.createQuery( buf.toString() ).list();
+        if( ! runFilter.hasSufficientCriteria( this.getSecAdvisor() ) ) {
+          message = "Please select a filter";
+        } else {
+          Session sess = this.getSecAdvisor().getReadOnlyHibernateSession(
+              this.getUsername() );
 
-        for( Iterator i = runs.iterator(); i.hasNext(); ) {
+          StringBuffer buf = runFilter.getQuery( this.getSecAdvisor() );
+          log.info( "Query for GetInstrumentRunList: " + buf.toString() );
+          List runs = sess.createQuery( buf.toString() ).list();
 
-          Object[] row = ( Object[] ) i.next();
+          for( Iterator i = runs.iterator(); i.hasNext(); ) {
 
-          Integer idInstrumentRun = row[0] == null ? new Integer( - 2 )
-              : ( Integer ) row[0];
-          String runDate = this.formatDate( ( java.sql.Timestamp ) row[1] );
-          String createDate = this.formatDate( ( java.sql.Timestamp ) row[2] );
-          String codeInstrumentRunStatus = row[3] == null ? ""
-              : row[3].toString();
-          String comments = row[4] == null ? "" : row[4].toString();
-          String label = row[5] == null ? "" : row[5].toString();
-          String codeReactionType = row[6] == null ? "" : row[6].toString();
-          String creator = row[7] == null ? "" : row[7].toString();
-          String codeSealType = row[8] == null ? "" : row[8].toString();
+            Object[] row = ( Object[] ) i.next();
 
-          Element irNode = new Element( "InstrumentRun" );
-          irNode.setAttribute( "idInstrumentRun", idInstrumentRun.toString() );
-          irNode.setAttribute( "runDate", runDate );
-          irNode.setAttribute( "createDate", this.formatDate(createDate, this.DATE_OUTPUT_SQL));
-          irNode.setAttribute( "codeInstrumentRunStatus",
-              codeInstrumentRunStatus.toString() );
-          irNode.setAttribute( "comments", comments );
-          irNode.setAttribute( "label", label );
-          irNode.setAttribute( "codeReactionType", codeReactionType );
-          if ( creator != null && !creator.equals( "" ) ) {
-            AppUser user = (AppUser)sess.get(AppUser.class, Integer.valueOf(creator));
-            irNode.setAttribute( "creator", user != null ? user.getDisplayName() : creator);
-          } else {
-            irNode.setAttribute( "creator", creator);
-          }
-          
-          irNode.setAttribute( "codeSealType", codeSealType );
-          irNode.setAttribute( "icon", ReactionType.getIcon(codeReactionType));
+            Integer idInstrumentRun = row[0] == null ? new Integer( - 2 )
+            : ( Integer ) row[0];
+            String runDate = this.formatDate( ( java.sql.Timestamp ) row[1] );
+            String createDate = this.formatDate( ( java.sql.Timestamp ) row[2] );
+            String codeInstrumentRunStatus = row[3] == null ? ""
+                : row[3].toString();
+            String comments = row[4] == null ? "" : row[4].toString();
+            String label = row[5] == null ? "" : row[5].toString();
+            String codeReactionType = row[6] == null ? "" : row[6].toString();
+            String creator = row[7] == null ? "" : row[7].toString();
+            String codeSealType = row[8] == null ? "" : row[8].toString();
 
-          List plates = sess.createQuery(
-              "SELECT p from Plate as p where p.idInstrumentRun="
-                  + idInstrumentRun + "  ORDER BY p.quadrant").list();
-
-          for( Iterator i2 = plates.iterator(); i2.hasNext(); ) {
-            Plate plate = ( Plate ) i2.next();
-            plate.excludeMethodFromXML( "getPlateWells" );
-            plate.excludeMethodFromXML( "getcreateDate" );
-            plate.excludeMethodFromXML( "getInstrumentRun" );
-            Element pNode = plate.toXMLDocument( null,
-                DetailObject.DATE_OUTPUT_SQL ).getRootElement();
-            pNode.setAttribute( "createDate",
-                this.formatDate( plate.getCreateDate() ) );
-
-            List wells = sess.createQuery(
-                "SELECT w from PlateWell as w where w.idPlate="
-                    + plate.getIdPlate()  ).list();
-
-            for( Iterator i3 = wells.iterator(); i3.hasNext(); ) {
-              PlateWell well = ( PlateWell ) i3.next();
-              well.excludeMethodFromXML( "getSample" );
-              well.excludeMethodFromXML("getAssay");
-              well.excludeMethodFromXML("getPrimer");
-              Element pwNode = well.toXMLDocument( null,
-                  DetailObject.DATE_OUTPUT_SQL ).getRootElement();
-
-              pwNode.setAttribute("requestSubmitDate", "");
-              pwNode.setAttribute("requestSubmitter", "");
-              
-              if ( well.getIdRequest() != null ) {
-                String idRequestString = well.getIdRequest().toString();
-                if ( idRequestString != null && !idRequestString.equals("")) {
-                  Request request = (Request) sess.createQuery("SELECT r from Request as r where r.idRequest=" + idRequestString).uniqueResult();
-                  if ( request != null ) {
-                    pwNode.setAttribute("requestSubmitDate", request.getCreateDate().toString());
-                    pwNode.setAttribute("requestSubmitter", request.getOwnerName());
-                  }
-                }
-              }
-              
-              pNode.addContent( pwNode );
+            Element irNode = new Element( "InstrumentRun" );
+            irNode.setAttribute( "idInstrumentRun", idInstrumentRun.toString() );
+            irNode.setAttribute( "runDate", runDate );
+            irNode.setAttribute( "createDate", this.formatDate(createDate, this.DATE_OUTPUT_SQL));
+            irNode.setAttribute( "codeInstrumentRunStatus",
+                codeInstrumentRunStatus.toString() );
+            irNode.setAttribute( "comments", comments );
+            irNode.setAttribute( "label", label );
+            irNode.setAttribute( "codeReactionType", codeReactionType );
+            if ( creator != null && !creator.equals( "" ) ) {
+              AppUser user = (AppUser)sess.get(AppUser.class, Integer.valueOf(creator));
+              irNode.setAttribute( "creator", user != null ? user.getDisplayName() : creator);
+            } else {
+              irNode.setAttribute( "creator", creator);
             }
 
-            irNode.addContent( pNode );
+            irNode.setAttribute( "codeSealType", codeSealType );
+            irNode.setAttribute( "icon", ReactionType.getIcon(codeReactionType));
+
+            List plates = sess.createQuery(
+                "SELECT p from Plate as p where p.idInstrumentRun="
+                + idInstrumentRun + "  ORDER BY p.quadrant").list();
+
+            for( Iterator i2 = plates.iterator(); i2.hasNext(); ) {
+              Plate plate = ( Plate ) i2.next();
+              plate.excludeMethodFromXML( "getPlateWells" );
+              plate.excludeMethodFromXML( "getcreateDate" );
+              plate.excludeMethodFromXML( "getInstrumentRun" );
+              Element pNode = plate.toXMLDocument( null,
+                  DetailObject.DATE_OUTPUT_SQL ).getRootElement();
+              pNode.setAttribute( "createDate",
+                  this.formatDate( plate.getCreateDate() ) );
+
+              List wells = sess.createQuery(
+                  "SELECT w from PlateWell as w where w.idPlate="
+                  + plate.getIdPlate()  ).list();
+
+              for( Iterator i3 = wells.iterator(); i3.hasNext(); ) {
+                PlateWell well = ( PlateWell ) i3.next();
+                well.excludeMethodFromXML( "getSample" );
+                well.excludeMethodFromXML("getAssay");
+                well.excludeMethodFromXML("getPrimer");
+                Element pwNode = well.toXMLDocument( null,
+                    DetailObject.DATE_OUTPUT_SQL ).getRootElement();
+
+                pwNode.setAttribute("requestSubmitDate", "");
+                pwNode.setAttribute("requestSubmitter", "");
+
+                if ( well.getIdRequest() != null ) {
+                  String idRequestString = well.getIdRequest().toString();
+                  if ( idRequestString != null && !idRequestString.equals("")) {
+                    Request request = (Request) sess.createQuery("SELECT r from Request as r where r.idRequest=" + idRequestString).uniqueResult();
+                    if ( request != null ) {
+                      pwNode.setAttribute("requestSubmitDate", request.getCreateDate().toString());
+                      pwNode.setAttribute("requestSubmitter", request.getOwnerName());
+                    }
+                  }
+                }
+
+                pNode.addContent( pwNode );
+              }
+
+              irNode.addContent( pNode );
+            }
+
+            doc.getRootElement().addContent( irNode );
+
           }
-
-          doc.getRootElement().addContent( irNode );
-
         }
+
+        XMLOutputter out = new org.jdom.output.XMLOutputter();
+        this.xmlResult = out.outputString( doc );
+
+        setResponsePage( this.SUCCESS_JSP );
+
+      } else {
+        this.addInvalidField( "Insufficient permissions",
+        "Insufficient permission to view run list." );
       }
-
-      XMLOutputter out = new org.jdom.output.XMLOutputter();
-      this.xmlResult = out.outputString( doc );
-
-      setResponsePage( this.SUCCESS_JSP );
     } catch( NamingException e ) {
       log.error( "An exception has occurred in GetRunList ", e );
       e.printStackTrace();
